--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -159,17 +159,19 @@
     </div>
   </transition>
 
-  <div v-show="isDesktopMegaVisible" @mouseleave="hideDesktopMega" class="row mega-drop desktop">
-    {% for block in section.blocks %}
-      {% if block.settings.enable_block %}
-        <a href="javascript:;" class="item">
-          <img src="{{ block.settings.image | img_url: 'x200' }}">
-          <h3>{{ block.settings.name }}</h3>
-          {{ block.settings.caption }}
-        </a>
-      {% endif %}
-    {% endfor %}
-  </div>
+  <transition name="fade">
+    <div v-show="isDesktopMegaVisible" @mouseleave="hideDesktopMega" class="row mega-drop desktop">
+      {% for block in section.blocks %}
+        {% if block.settings.enable_block %}
+          <a href="javascript:;" class="item">
+            <img src="{{ block.settings.image | img_url: 'x200' }}">
+            <h3>{{ block.settings.name }}</h3>
+            {{ block.settings.caption }}
+          </a>
+        {% endif %}
+      {% endfor %}
+    </div>
+  </transition>
 
   <transition name="fade">
     <div v-if="isCartDetailVisible" class="row mobile cart-detail">
@@ -243,107 +245,6 @@
       </form>
     </div>
   </transition>
-
-<!--   <header role="banner">
-    {% if template.name == 'index' %}
-      <h1>
-    {% else %}
-      <div class="h1">
-    {% endif %}
-        <a href="/" class="logo-image">
-          {% if section.settings.logo != blank %}
-            {% capture image_size %}{{ section.settings.logo_max_width }}x{% endcapture %}
-            <img src="{{ section.settings.logo | img_url: image_size }}"
-                srcset="{{ section.settings.logo | img_url: image_size }} 1x, {{ section.settings.logo | img_url: image_size, scale: 2 }} 2x"
-                alt="{{ section.settings.logo.alt | default: shop.name }}">
-          {% else %}
-            {{ shop.name }}
-          {% endif %}
-        </a>
-    {% if template.name == 'index' %}
-      </h1>
-    {% else %}
-      </div>
-    {% endif %}
-
-    <a href="/cart">
-      {% include 'icon-cart' %}
-      {{ 'layout.cart.title' | t }}
-      ({{ cart.item_count }} {{ 'layout.cart.items_count' | t: count: cart.item_count }})
-    </a>
-
-    {% if shop.customer_accounts_enabled %}
-      <ul>
-        {% if customer %}
-          <li>
-            {% if customer.first_name != blank %}
-              {% capture first_name %}<a href="/account">{{ customer.first_name }}</a>{% endcapture %}
-              {{ 'layout.customer.logged_in_as_html' | t: first_name: first_name }}
-            {% else %}
-              <a href="/account">{{ 'layout.customer.account' | t }}</a>
-            {% endif %}
-          </li>
-          <li>
-            {{ 'layout.customer.log_out' | t | customer_logout_link }}
-          </li>
-        {% else %}
-          <li>
-            {{ 'layout.customer.log_in' | t | customer_login_link }}
-          </li>
-          <li>
-            {{ 'layout.customer.create_account' | t | customer_register_link }}
-          </li>
-        {% endif %}
-      </ul>
-    {% endif %}
-
-    <form action="/search" method="get" role="search">
-      <label for="Search-{{ section.id }}" class="label-hidden">
-        {{ 'general.search.placeholder' | t }}
-      </label>
-
-      <input type="search"
-        name="q"
-        id="Search-{{ section.id }}"
-        value="{{ search.terms | escape }}"
-        placeholder="{{ 'general.search.placeholder' | t }}">
-
-      <button type="submit" class="button">
-        {% include 'icon-search' %}
-        <span class="icon-fallback-text">{{ 'general.search.submit' | t }}</span>
-      </button>
-    </form>
-  </header>
-
-  <nav role="navigation">
-    <ul>
-      {% for link in linklists[section.settings.menu].links %}
-        {% if link.links != blank %}
-          <li>
-            <a href="{{ link.url }}">
-              {{ link.title }}
-              {% include 'icon-arrow-down' %}
-            </a>
-            <ul>
-              {% for childlink in link.links %}
-                <li>
-                  <a href="{{ childlink.url }}">
-                    {{ childlink.title }}
-                  </a>
-                </li>
-              {% endfor %}
-            </ul>
-          </li>
-        {% else %}
-          <li>
-            <a href="{{ link.url }}">
-              {{ link.title }}
-            </a>
-          </li>
-        {% endif %}
-      {% endfor %}
-    </ul>
-  </nav> -->
 </nav>
 
 <!-- Roy -->
