Feature: style empty cart

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -176,57 +176,61 @@
   <transition name="fade">
     <div v-if="isCartDetailVisible" class="row mobile cart-detail">
       <div class="drawer" v-click-outside="hideCartDetail">
-        <a @click="hideCartDetail" href="javascript:;" class="continue-shopping">
-          {{ 'cart.general.continue_shopping_link_html' | t }}
-        </a>
+        {% if cart.item_count > 0 %}
+          <a @click="hideCartDetail" href="javascript:;" class="continue-shopping">
+            {{ 'cart.general.continue_shopping_link_html' | t }}
+          </a>
 
-        <ul>
-          {% for item in cart.items %}
-            <li class="cart-item">
-              <a href="{{ item.url}}">
-                <div class="image">
-                  <img src="{{ item | img_url: '160x' }}" alt="{{ item.title | escape }}">
+          <ul>
+            {% for item in cart.items %}
+              <li class="cart-item">
+                <a href="{{ item.url}}">
+                  <div class="image">
+                    <img src="{{ item | img_url: '160x' }}" alt="{{ item.title | escape }}">
+                  </div>
+                  <div class="title">
+                    <span>{{ item.product.title }}</span>
+                  </div>
+                  <div class="price">
+                    <span>{{ item.price | money}}</span>
+                  </div>
+                </a>
+
+                <div class="quantity">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <a class="button">
+                        <span class="icon-minus"></span>
+                      </a>
+                    </p>
+                    <p class="control">
+                      <input class="input" type="text" size="2" value="{{ item.quantity }}">
+                    </p>
+                    <p class="control">
+                      <a class="button">
+                        <span class="icon-plus"></span>
+                      </a>
+                    </p>
+                  </div>
                 </div>
-                <div class="title">
-                  <span>{{ item.product.title }}</span>
-                </div>
-                <div class="price">
-                  <span>{{ item.price | money}}</span>
-                </div>
+              </li>
+            {% endfor %}
+          </ul>
+
+          <div class="foot">
+            <p class="subtotal">
+              <span>{{ 'layout.general.subtotal' | t }}</span>
+              <span class="is-pulled-right">{{ cart.total_price | money }}</span>
+            </p>
+            <p class="text-center">
+              <a class="button" href="/cart">
+                {{ 'layout.general.go_to_cart' | t }}
               </a>
-
-              <div class="quantity">
-                <div class="field has-addons">
-                  <p class="control">
-                    <a class="button">
-                      <span class="icon-minus"></span>
-                    </a>
-                  </p>
-                  <p class="control">
-                    <input class="input" type="text" size="2" value="{{ item.quantity }}">
-                  </p>
-                  <p class="control">
-                    <a class="button">
-                      <span class="icon-plus"></span>
-                    </a>
-                  </p>
-                </div>
-              </div>
-            </li>
-          {% endfor %}
-        </ul>
-
-        <div class="foot">
-          <p class="subtotal">
-            <span>{{ 'layout.general.subtotal' | t }}</span>
-            <span class="is-pulled-right">{{ cart.total_price | money }}</span>
-          </p>
-          <p class="text-center">
-            <a class="button" href="/cart">
-              {{ 'layout.general.go_to_cart' | t }}
-            </a>
-          </p>
-        </div>
+            </p>
+          </div>
+        {% else %}
+          <p class="empty">{{ 'layout.general.empty_cart' | t }}</p>
+        {% endif %}
       </div>
     </div>
   </transition>
