--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -377,6 +377,14 @@
     }
   }
 
+  .empty {
+    font-family: neuzeit_grotesk_regular;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    padding: 40px 0px;
+  }
+
   .continue-shopping {
     display: block;
     color: #333333;
