--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -1,3 +1,11 @@
+body {
+  padding-top: 80px;
+
+  @media screen and (min-width: $tablet) {
+    padding-top: 90px;
+  }
+}
+
 .navbar {
   overflow-y: visible;
   background: none;
