--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -44,3 +44,58 @@
     width: 240px;
   }
 }
+
+.section.featured-box {
+  background-color: rgb(241, 242, 242);
+
+  .item {
+    background-size: 100%;
+    width: 100%;
+    height: 420px;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 20px;
+    padding-top: 50px;
+    position: relative;
+    margin: 0 auto;
+    max-width: 420px;
+
+    @media screen and (min-width: $tablet) {
+      max-width: none;
+      padding-top: 70px;
+      height: 570px;
+    }
+  }
+
+  h3 {
+    font-weight: bold;
+    font-size: 28px;
+    font-family: neuzeitgroteskblack;
+    letter-spacing: 0.1px;
+    line-height: 30px;
+    color: #333333;
+    text-align: center;
+    font-style: normal;
+  }
+
+  .foot {
+    width: 100%;
+    position: absolute;
+    bottom: 40px;
+    text-align: center;
+
+    @media screen and (min-width: $tablet) {
+      bottom: 64px;
+    }
+
+    a {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      background: #0090fc;
+      border: none;
+      color: #fff;
+      width: 186px;
+      font-weight: bold;
+      letter-spacing: 1.2px;
+    }
+  }
+}
