--- a/src/sections/featured-box.liquid
+++ b/src/sections/featured-box.liquid
@@ -7,7 +7,7 @@
             <h3>{{ block.settings.title }}</h3>
 
             <div class="foot">
-              <a class="button" href="block.settings.link">{{ block.settings.link_text }}</a>
+              <a class="button" href="{{ block.settings.link }}">{{ block.settings.link_text }}</a>
             </div>
           </div>
         </div>
