--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -266,9 +266,13 @@
 
   img {
     height: 60px;
+    width: 100%;
 
     @media screen and (min-width: $tablet) {
       padding: 0 20px;
+      display: block;
+      margin: 0 auto;
+      max-width: 900px;
     }
   }
 
