Fix: use container to add spacing for larger screen

--- a/src/sections/featured-box.liquid
+++ b/src/sections/featured-box.liquid
@@ -1,18 +1,20 @@
 <section class="section featured-box">
-  <div class="columns">
-    {% for block in section.blocks %}
-      {% if block.settings.enable_block %}
-        <div class="column">
-          <div class="item" style="background-image: url('{{ block.settings.image | img_url: 'master' }}');">
-            <h3>{{ block.settings.title }}</h3>
+  <div class="container">
+    <div class="columns">
+      {% for block in section.blocks %}
+        {% if block.settings.enable_block %}
+          <div class="column">
+            <div class="item" style="background-image: url('{{ block.settings.image | img_url: 'master' }}');">
+              <h3>{{ block.settings.title }}</h3>
 
-            <div class="foot">
-              <a class="button" href="{{ block.settings.link }}">{{ block.settings.link_text }}</a>
+              <div class="foot">
+                <a class="button" href="{{ block.settings.link }}">{{ block.settings.link_text }}</a>
+              </div>
             </div>
           </div>
-        </div>
-      {% endif %}
-    {% endfor %}
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
 </section>
 
