--- a/src/sections/image-with-text.liquid
+++ b/src/sections/image-with-text.liquid
@@ -1,21 +1,23 @@
 <section class="section image-with-text">
-  {% if section.settings.title != blank %}
-    <h2>{{ section.settings.title}}</h2>
-  {% endif %}
+  <div class="container">
+    {% if section.settings.title != blank %}
+      <h2>{{ section.settings.title}}</h2>
+    {% endif %}
 
-  {% if section.settings.image %}
-    <div class="image-wrapper">
-      <img src="{{ section.settings.image | img_url: 'master' }}">
-    </div>
-  {% endif %}
+    {% if section.settings.image %}
+      <div class="image-wrapper">
+        <img src="{{ section.settings.image | img_url: 'master' }}">
+      </div>
+    {% endif %}
 
-  {% if section.settings.cta_text != blank %}
-    <p class="cta">
-      <a class="button" href="{{ section.settings.cta_link }}">
-        {{ section.settings.cta_text}}
-      </a>
-    </p>
-  {% endif %}
+    {% if section.settings.cta_text != blank %}
+      <p class="cta">
+        <a class="button" href="{{ section.settings.cta_link }}">
+          {{ section.settings.cta_text}}
+        </a>
+      </p>
+    {% endif %}
+  </div>
 </section>
 
 {% schema %}
