--- a/src/sections/three-item-banner.liquid
+++ b/src/sections/three-item-banner.liquid
@@ -1,27 +1,29 @@
 <section class="section three-item-banner">
-  {% if section.settings.title != blank %}
-    <h2>{{ section.settings.title }}</h2>
-  {% endif %}
+  <div class="container">
+    {% if section.settings.title != blank %}
+      <h2>{{ section.settings.title }}</h2>
+    {% endif %}
 
-  <swiper :options="swiperOption">
-    {% for block in section.blocks %}
-      <swiper-slide>
-        <div class="item">
-          <span class="number-{{forloop.index}}"></span>
-          {{ block.settings.text }}
-        </div>
-      </swiper-slide>
-    {% endfor %}
-    <div class="swiper-pagination" slot="pagination"></div>
-  </swiper>
+    <swiper :options="swiperOption">
+      {% for block in section.blocks %}
+        <swiper-slide>
+          <div class="item">
+            <span class="number-{{forloop.index}}"></span>
+            {{ block.settings.text }}
+          </div>
+        </swiper-slide>
+      {% endfor %}
+      <div class="swiper-pagination" slot="pagination"></div>
+    </swiper>
 
-  {% if section.settings.cta_text != blank %}
-    <p class="cta">
-      <a class="button" href="{{ section.settings.cta_link }}">
-        {{ section.settings.cta_text}}
-      </a>
-    </p>
-  {% endif %}
+    {% if section.settings.cta_text != blank %}
+      <p class="cta">
+        <a class="button" href="{{ section.settings.cta_link }}">
+          {{ section.settings.cta_text}}
+        </a>
+      </p>
+    {% endif %}
+  </div>
 </section>
 
 {% schema %}
