--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -42,6 +42,17 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Univers-Cn';
+  src: url('../assets/fonts/UniversLTStd-Cn.eot?#iefix') format('embedded-opentype'),
+       url('../assets/fonts/UniversLTStd-Cn.otf') format('opentype'),
+       url('../assets/fonts/UniversLTStd-Cn.woff') format('woff'),
+       url('../assets/fonts/UniversLTStd-Cn.ttf') format('truetype'),
+       url('../assets/fonts/UniversLTStd-Cn.svg#UniversLTStd-Cn') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 // @font-face {
 //   font-family: 'Univers-Cn';
 //   src: url('UniversLTStd-Cn.eot?#iefix') format('embedded-opentype'),
