--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -288,6 +288,11 @@
 
 .section.featured-products {
   background-color: #f3f4f4;
+  padding: 50px 0px;
+
+  @media screen and (min-width: $tablet) {
+    padding: 3rem 1.5rem;
+  }
 
   h2 {
     font-size: 32px;
@@ -380,6 +385,49 @@
       font-weight: bold;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       letter-spacing: 1px;
+    }
+  }
+}
+
+.section.icon-swiper {
+  padding: 30px 0px;
+  background-color: #f1f2f2;
+
+  @media screen and (min-width: $tablet) {
+    padding: 3rem 1.5rem;
+  }
+
+  .swiper-wrapper {
+    padding-bottom: 50px;
+
+    @media screen and (min-width: $tablet) {
+      padding-bottom: 0px;
+    }
+  }
+
+  .swiper-pagination {
+    @media screen and (min-width: $tablet) {
+      display: none;
+    }
+  }
+
+  .item {
+    vertical-align: middle;
+    display: block;
+
+    img {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 10px;
+      height: 50px;
+    }
+
+    p {
+      text-align: center;
+      font-size: 15px;
+      color: #878787;
+      font-family: 'neuzeit_grotesk_light';
+      line-height: 18px;
     }
   }
 }
