--- a/src/sections/image-with-text.liquid
+++ b/src/sections/image-with-text.liquid
@@ -6,7 +6,7 @@
 
     {% if section.settings.image %}
       <div class="image-wrapper">
-        <img src="{{ section.settings.image | img_url: 'master' }}">
+        <img class="lazyload" data-src="{{ section.settings.image | img_url: 'master' }}">
       </div>
     {% endif %}
 
