--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -66,7 +66,8 @@ body {
     display: none;
 
     @media screen and (min-width: $tablet) {
-      display: block;
+      display: flex;
+      justify-content: center;
     }
   }
 
