Fix: minor style fix

--- a/src/sections/featured-products.liquid
+++ b/src/sections/featured-products.liquid
@@ -28,7 +28,7 @@
     </div>
 
     {% if section.settings.link_text != blank %}
-      <p>
+      <p class="link-button">
         <a class="button" href="{{ section.settings.link }}">
           {{ section.settings.link_text}}
         </a>
