--- a/src/sections/newsletter.liquid
+++ b/src/sections/newsletter.liquid
@@ -1,37 +1,24 @@
-{%- comment -%}
-  This is a required section for the Shopify Theme Store.
-  It is available when you add "Newsletter" section on the Theme Editor.
-
-  Theme Store required settings
-  - Heading: title of the newsletter section
-  - Subheading: description of the newsletter section
-{%- endcomment -%}
-<section>
-  {% if section.settings.section_title != blank %}
-    <label for="Email">{{ section.settings.section_title | escape }}</label>
-  {% endif %}
-  {% if section.settings.subheading != blank %}
-    <p>{{ section.settings.subheading | escape }}</p>
-  {% endif %}
-
-  {% form 'customer' %}
-    {{ form.errors | default_errors }}
-    {% if form.posted_successfully? %}
-      <p>{{ 'general.newsletter_form.confirmation' | t }}</p>
-    {% else %}
-      <input type="hidden" name="contact[tags]" value="newsletter">
-      <input type="email"
-        name="contact[email]"
-        id="Email"
-        value="{% if customer.email != blank %}{{ customer.email }}{% endif %}"
-        placeholder="{{ 'general.newsletter_form.email_placeholder' | t }}"
-        autocorrect="off"
-        autocapitalize="off">
-      <button type="submit" name="commit" id="Subscribe">
-        <span>{{ 'general.newsletter_form.submit' | t }}</span>
-      </button>
+<section class="section newsletter">
+  <div class="container">
+    {% if section.settings.title != blank %}
+      <h2>{{ section.settings.title | escape }}</h2>
     {% endif %}
-  {% endform %}
+
+    {% if section.settings.text != blank %}
+      <p>{{ section.settings.text | escape }}</p>
+    {% endif %}
+
+    {% if section.settings.action_url != blank %}
+      <form action="{{ section.settings.action_url }}" method="POST" target="_blank">
+        <input type="hidden" name="g" value="NDrWDc">
+        <input type="email" name="email" placeholder="{{ 'general.newsletter_form.placeholder' | t }}">
+
+        <button type="submit" class="button" name="subscribe">
+          {{ section.settings.button_text }}
+        </button>
+      </form>
+    {% endif %}
+  </div>
 </section>
 
 {% schema %}
@@ -40,24 +27,32 @@
     "settings": [
       {
         "type": "text",
-        "id": "section_title",
-        "label": "Heading",
-        "default": "Subscribe to our newsletter"
+        "id": "title",
+        "label": "Title"
       },
       {
         "type": "text",
-        "id": "subheading",
-        "label": "Subheading",
-        "default": "A short sentence describing what someone will receive by subscribing"
+        "id": "text",
+        "label": "Text"
       },
       {
-        "type": "paragraph",
-        "content": "Any customers who sign up will have an account created for them in Shopify. [View customers](/admin/customers?query=&accepts_marketing=1)"
+        "type": "text",
+        "id": "button_text",
+        "label": "Button Text",
+        "default": "SUBMIT"
+      },
+      {
+        "type": "text",
+        "id": "action_url",
+        "label": "Newsletter URL",
+        "default": "//manage.kmail-lists.com/subscriptions/subscribe"
       }
     ],
-    "presets": [{
-      "name": "Newsletter",
-      "category": "Promotional"
-    }]
+    "presets": [
+      {
+        "name": "Newsletter",
+        "category": "Form"
+      }
+    ]
   }
 {% endschema %}
