--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -1,8 +1,34 @@
 body {
-  padding-top: 80px;
+  padding-top: 40px;
 
   @media screen and (min-width: $tablet) {
-    padding-top: 90px;
+    padding-top: 60px;
+  }
+
+  &.announcement-visible {
+    padding-top: 80px;
+
+    @media screen and (min-width: $tablet) {
+      padding-top: 90px;
+    }
+  }
+}
+
+.announcement-visible .navbar .nav-drop {
+  position: absolute;
+  top: 81px;
+
+  @media screen and (min-width: $tablet) {
+    top: 91px;
+  }
+}
+
+.navbar .nav-drop {
+  position: absolute;
+  top: 40px;
+
+  @media screen and (min-width: $tablet) {
+    top: 60px;
   }
 }
 
@@ -54,6 +80,7 @@ body {
     justify-content: center;
     font-size: 12px;
     color: white;
+    padding-right: 15px;
 
     &:hover {
       color: white;
@@ -217,8 +244,6 @@ body {
 }
 
 .navbar > .mega-drop.mobile {
-  position: absolute;
-  top: 80px;
   background-color: white;
   opacity: 0.95;
   border-top: 1px solid #ccc;
@@ -297,7 +322,6 @@ body {
 .navbar > .mega-drop.desktop {
   display: flex;
   justify-content: center;
-  margin-top: -10px;
   background-color: white;
   height: 240px;
 
@@ -329,8 +353,6 @@ body {
 }
 
 .navbar > .search {
-  position: absolute;
-  top: 80px;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
@@ -364,14 +386,8 @@ body {
 }
 
 .navbar > .cart-detail {
-  position: absolute;
-  top: 80px;
   display: flex;
   justify-content: flex-end;
-
-  @media screen and (min-width: $tablet) {
-    top: 90px;
-  }
 
   .drawer {
     background-color: white;
