--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -5,7 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="{{ settings.color_accent }}">
+  <meta name="robots" content="index,follow">
   <link rel="canonical" href="{{ canonical_url }}">
+  {% if settings.favicon != nil %}
+    <link rel="shortcut icon" type="image/x-icon" href="{{ settings.favicon | img_url: '32x32' }}">
+  {% else %}
+    <link rel="shortcut icon" type="image/x-icon" href="{{ 'favicon.png' | asset_url }}">
+  {% endif %}
 
   <!-- Optimization: Preload Fonts -->
   <link rel="preload" href="{{ 'neuzeitgroteskblack.woff2' | asset_url }}" as="font" type="font/woff2" crossorigin="anonymous">
