--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -114,6 +114,16 @@
     text-align: center;
   }
 
+  .reviews {
+    &:after {
+      content: "\0020";
+      display: block;
+      height: 0;
+      clear: both;
+      visibility: hidden;
+    }
+  }
+
   #stamped-reviews-widget {
     margin-bottom: 60px;
 
