--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="{{ settings.color_accent }}">
   <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="1GuKV9Ynhy01MON2gGSP-rmAXmClHgt956WgfNd9BEY" />
+
   <link rel="canonical" href="{{ canonical_url }}">
   {% if settings.favicon != nil %}
     <link rel="shortcut icon" type="image/x-icon" href="{{ settings.favicon | img_url: '32x32' }}">
