Feature: add review section
chore: cleanup code

--- a/src/styles/templates/page.compare.scss
+++ b/src/styles/templates/page.compare.scss
@@ -1,5 +1,6 @@
 @import "~bulma/sass/utilities/initial-variables.sass";
 @import "../variables.scss";
+@import "../sections/stamped-review.scss";
 
 .section.compare-banner {
   &::before {
