Chore: minor css fix

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -33,7 +33,8 @@ body {
 }
 
 .navbar {
-  overflow-y: visible;
+  height: 100%;
+  overflow-y: scroll;
   background: none;
 
   .height-enter-active, .height-leave-active {
