--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -36,6 +36,12 @@ body {
   overflow-y: visible;
   background: none;
 
+  &.scrollable {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100%;
+  }
+
   .height-enter-active, .height-leave-active {
     transition: height 0.3s linear;
     overflow: hidden;
